Changed header margin top, and fixed up some whitespace in _var.scss

--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -63,9 +63,8 @@ $container-width: 56em;
 $heading-font-family: Georgia, Times, 'Times New Roman', serif;
 $line-height: 1.6;
 
-
 $h1-responsive: 3vw;
 $h1-responsive-max: 2.84rem;
 
-
 $border-color: $lighten-2;
+$heading-margin-top: $space-1;
